back-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-deployment
  labels:
    app: back-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back-deployment
  template:
    metadata:
      labels:
        app: back-deployment
    spec:
      containers:
      - name: back-deployment
        image: killianndev/ephemere-spring-back
        imagePullPolicy: Never
        ports:
        - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: back-service
spec:
  selector:
    app: back-deployment
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
