ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
  annotations: 
    cert-manager.io/cluster-issuer: selfsigned-issuer 
  name: local-ingress 
spec: 
  rules: 
  - host: test-app.com 
    http: 
      paths:
      - path: /api
        pathType: Prefix 
        backend: 
          service:
            name: back-service
            port: 
              number: 9000
      - path: /
        pathType: Prefix 
        backend: 
          service:
            name: front-service
            port: 
              number: 8080
  tls: 
  - hosts: 
    - test-app.com 
    secretName: test-app-cert-tls
